# ICU-Mortality-Prediction-Research-Demo

./: .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  README.md  pyproject.toml  quick_start.py  requirements.txt  setup.sh
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
results/: random_forest_results.yaml  xgboost_results.yaml
scripts/: evaluate.py  train.py
src/data/: __init__.py
src/metrics/: __init__.py
src/utils/: __init__.py  explainability.py
tests/: test_icu_prediction.py
